# alex-test

./: .gitignore  README-cicd.md  README.md  Untitled.ipynb  create_dataset.py  deploy.sh  increase_memory.sh  reset_etl_state.py  scheduler-config.yaml  workflow.yaml
.cursor/rules/: cursorrules.mdc
.github/workflows/: build-deploy.yml
backend/: Dockerfile  __init__.py  app.py  experiments.ipynb  pyproject.toml  run_scraper.sh  testing.py
backend/api/: __init__.py  routes.py
backend/api_service/src/: main.py
backend/db/: __init__.py  database.py
backend/models/: __init__.py  database_models.py  message.py  stock.py
backend/processor_service/src/: main.py
backend/processor_service/src/processors/: message_processor.py
backend/processors/: __init__.py  text_processor.py
backend/scraper_service/src/: __init__.py  experiments.ipynb  last_daily_discussion_id.txt  main.py  test_main.py
backend/scraper_service/src/scrapers/: __init__.py  base_scraper.py  cnbc_scraper.py  reddit_scraper.py  twitter_scraper.py
backend/scrapers/: __init__.py  base_scraper.py  reddit_scraper.py  twitter_scraper.py
frontend/: package.json
frontend/src/: App.js
frontend/src/pages/: Dashboard.js
functions/: .firebaserc  .gitignore  README.md  __init__.py  bigquery_ops.py  db.py  dump_to_bigquery.py  firebase.json  firestore_ops.py  main.py  playground.ipynb  pyproject.toml  requirements.txt  test_local.py  write_to_firestore.py
functions/models/: database_models.py  message.py  stock.py
functions/process_data_for_bigquery/: main.py
functions/run_bigquery_analysis/: main.py
functions/scrape_reddit/: main.py
functions/scrapers/: base_scraper.py  reddit_scraper.py  reddit_scraper_v2.py  run_reddit_scrapes.py
functions/tests/: run_dump_to_bigquery_test.py  test_dump_to_bigquery.py  test_scraper.py
functions/utils/: retry.py
reddit-etl-job/: Dockerfile  README.md  README_TEST.md  Untitled.ipynb  deploy.sh  docker-compose.yml  main.py  requirements.txt  sample.env  simple_run.py  test_hourly_persistence.py
reddit-etl-job/src/: app.py  routes.py  starter.py  worker.py
reddit-etl-job/src/activities/: aggregation_activities.py  analysis_activities.py  extraction_activities.py  persistence_activities.py  state_activities.py
reddit-etl-job/src/aggregators/: daily_aggregator.py  hourly_aggregator.py  weekly_aggregator.py
reddit-etl-job/src/extractors/: bigquery_extractor.py
reddit-etl-job/src/models/: stock_data.py
reddit-etl-job/src/utils/: base_aggregator.py  bigquery_utils.py  db_utils.py  json_utils.py  state_manager.py  stock_analyzer.py
reddit-etl-job/src/workflows/: reddit_etl_workflow.py
reddit-etl-job/tests/: test_bq_processing.py  test_date_handling.py  test_run.py  test_timestamp_format.py  test_weekly_insertion.py
yfinance_bq_loader/: ticker_volume_simple.py
