[tool.poetry]
name = "stock-social-sentiment-backend"
version = "0.1.0"
description = "Backend for stock social sentiment analysis"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.3"
flask-cors = "^4.0.0"
tweepy = "^4.14.0"
praw = "^7.7.1"
nltk = "^3.8.1"
pandas = "^2.1.0"
python-dotenv = "^1.0.0"
transformers = "^4.31.0"
torch = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 